added middleware for paseto token verification.
